# auto-chart-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py  test_telegram.py
.github/workflows/: daily-report.yml
config/: __init__.py  settings.py
docs/: DATA_SOURCES.md
samples/: README.md  answer_cj_cgv.json  answer_daol.json  answer_hmm.json  answer_kakao.json  answer_lg_electronics.json  answer_naver.json
scripts/: generate_answer_samples.py
src/: __init__.py  chart_analyzer.py
src/data/: __init__.py  analyst_sources.py  company_mapping.py  dart_source.py  founders_fund.py  kiwoom_research.py  kr_sources.py  kr_universe.py  market_data.py  rss_sources.py  us_sources.py  us_universe.py  youtube_source.py
src/delivery/: __init__.py  telegram_notifier.py
src/intelligence/: __init__.py  gemini_analyzer.py
src/logic/: __init__.py  chart_compress.py  chart_normalize.py  filter_candidates.py  indicators.py  ohlcv_processor.py  pattern_rules.py  volume_rank.py
test_cases/: pattern_self_test.py
tests/: __init__.py  test_chart_analyzer.py
